--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ botocore==1.14.9
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==3.1.2
+django-heroku==0.3.1
 docutils==0.15.2
 gunicorn==20.0.4
 isort==4.3.21
 jmespath==0.9.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+psycopg2==2.7.5
 pyasn1==0.4.8
 pylint==2.4.4
 python-dateutil==2.8.1
