--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ isort==4.3.21
 jmespath==0.9.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-psycopg2==2.7.5
+psycopg2-binary==2.7.5
 pyasn1==0.4.8
 pylint==2.4.4
 python-dateutil==2.8.1
