--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,12 @@
+appdirs==1.4.4
 asgiref==3.2.10
-astroid==2.3.3
-awscli==1.17.9
-botocore==1.14.9
-colorama==0.4.1
-dj-database-url==0.5.0
+distlib==0.3.1
 Django==3.1.2
-django-heroku==0.3.1
-docutils==0.15.2
-gunicorn==20.0.4
-isort==4.3.21
-jmespath==0.9.4
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-psycopg2-binary==2.7.5
-pyasn1==0.4.8
-pylint==2.4.4
-python-dateutil==2.8.1
-python-decouple==3.3
+filelock==3.0.12
+GDAL==3.1.4
+numpy==1.19.3
+protobuf==3.13.0
 pytz==2020.1
-PyYAML==5.2
-rsa==3.4.2
-s3transfer==0.3.2
+six==1.15.0
 sqlparse==0.4.1
-typed-ast==1.4.0
-urllib3==1.25.8
-whitenoise==5.2.0
-wrapt==1.11.2
+virtualenv==20.1.0
