--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 appdirs==1.4.4
 asgiref==3.2.10
 distlib==0.3.1
-dj-database-url==0.4.1
+dj-database-url==0.5.0
 Django==3.1.2
 filelock==3.0.12
 GDAL==3.1.4
+gunicorn==20.0.4
 numpy==1.19.3
 protobuf==3.13.0
 pytz==2020.1
 six==1.15.0
 sqlparse==0.4.1
 virtualenv==20.1.0
+whitenoise==5.2.0
